--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".Register"
+            android:name=".Authentication.Register"
             android:exported="false" />
         <activity
-            android:name=".Home"
+            android:name=".Navigation.Acti_Navi"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Authentication.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
